--- a/guess-number-task/src/guess-number-task.ipynb
+++ b/guess-number-task/src/guess-number-task.ipynb
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "t4WXEDFS_ThY"
       },
@@ -387,11 +387,9 @@
     "colab": {
       "provenance": []
     },
-    "interpreter": {
-      "hash": "09714a52f69239c6409b3d073f9f3ca0ddb4056fc648d88f7346d3f36a5c4020"
-    },
     "kernelspec": {
-      "display_name": "Python 3.7.7 64-bit ('ds': conda)",
+      "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -404,7 +402,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.13.0"
     },
     "orig_nbformat": 4
   },
