Removing file from the staging area

--- a/skillfactory/Блок 1/PYTHON-15.1. Markdown и GIT для создания портфолио/DS_15.1_theory.ipynb
+++ b/skillfactory/Блок 1/PYTHON-15.1. Markdown и GIT для создания портфолио/DS_15.1_theory.ipynb
@@ -446,6 +446,149 @@
     "\n",
     "В качестве примера предлагаем написать документацию по нашей мини-библиотеке в виде файла README.md."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Системы контроля версий. Git и GitHub."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В этом юните мы:\n",
+    "\n",
+    "углубим своё понимание версионирования кода;\n",
+    "рассмотрим типы системы контроля версий;\n",
+    "поймём, какое место среди них занимает Git;\n",
+    "создадим репозиторий на GitHub, с которым будем работать на протяжении модуля.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для чего мне могут понадобиться знания по теории систем контроля версий?\n",
+    "Во-первых, если вы разбираетесь в том, как работает система контроля версий, вам становится значительно проще с ней работать.\n",
+    "\n",
+    "Во-вторых, часто, когда разработчиков спрашивают, что такое Git, все сразу как по учебнику отвечают примерно следующее: «Git — это распределённая система контроля версий». И вроде бы всё правильно, но когда дотошные интервьюеры задают кандидатам уточняющие вопросы (Что значит «распределённая»? Какие ещё бывают системы контроля версий?), те в большинстве своём теряются."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В программировании за сохранение кода в контрольных точках отвечает система контроля версий — специальная технология, которую можно подключить к любому проекту.\n",
+    "\n",
+    "Система управления версиями (англ. Version Control System) — это программное обеспечение, которое позволяет управлять состояниями изменяющейся информации. Благодаря таким системам несколько людей могут работать с файлами, сохранять их версии, перемещаться между версиями и откатывать изменения."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ЗАЧЕМ УПРАВЛЯТЬ ВЕРСИЯМИ?\n",
+    "\n",
+    "Ситуация, в которой электронный документ (например, файл с кодом) за время своего существования претерпевает ряд изменений, достаточно типична и очевидна. При этом часто бывает важно иметь не только последнюю версию, но и несколько предыдущих.\n",
+    "\n",
+    "В простейшем случае можно вручную создать несколько версий одного и того же файла, например file.py, file-1.py, file-2.py и т. д. Такой способ неэффективен: во-первых, из-за него необходимо хранить несколько практически идентичных копий, во-вторых, он требует повышенного внимания и часто приводит к ошибкам. Чтобы решить эти проблемы, были разработаны средства автоматизации.\n",
+    "\n",
+    "Репозиторий — это хранилище каких-либо данных. В случае с системой контроля версий, репозиторий — это хранилище, содержащее программный код и другие атрибуты (например, данные) IT-проекта.\n",
+    "\n",
+    "Основная задача системы управления версиями — фиксация различных изменений, произведённых с файлами в репозитории, и возможность отслеживать эти изменения и управлять ими. Например, если произошло обновление программного кода, которое губительно повлияло на работу программы, можно отследить, кто, где и когда произвёл эти изменения, а при необходимости — отменить их. Кроме того, при использовании системы контроля версий есть возможность создавать различные резервные копии программного кода.\n",
+    "\n",
+    "На скриншоте ниже представлено два варианта файла с кодом на языке JavaScript. В режиме сравнения версий редактор VS Code обращает наше внимание на строку 13 — именно она была изменена:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ТИПЫ СИСТЕМ КОНТРОЛЯ ВЕРСИЙ\n",
+    "\n",
+    "* Локальные\n",
+    "* Централизованные\n",
+    "* Распределенные"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Часто понятие «система контроля версий» ассоциируется только с Git. Однако Git — не первая и не единственная такая система. Для расширения кругозора предлагаем вам познакомимся со знаковыми представителями в этой статье."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Git — это проект, созданный Линусом Торвальдсом и изначально предназначенный для конкретной цели — управления разработкой ядра операционной системы Linux. Первая версия Git была выпущена 7 апреля 2005 года."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Как мы отмечали ранее, Git — распределённая система управления версиями. Кроме того, в Git предусмотрен механизм ветвления, о котором мы поговорим далее. Если не вдаваться в подробности, то разработчики могут создавать отдельные ветки проекта и обмениваться изменениями до их объединения в официальную ветвь.\n",
+    "\n",
+    "В Git практически все операции совершаются локально, то есть на вашем компьютере, сеть используется только для операций обмена с удалёнными репозиториями.\n",
+    "\n",
+    "Со временем Git развился в простую, быструю, эффективную систему контроля версий. Для него были разработаны:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Графические интерфейсы (для удобства пользователей).\n",
+    "Однако максимально эффективной работы можно добиться, комбинируя текстовые команды и использование возможностей GUI, поэтому знание текстовых команд тоже важно для разработчика.\n",
+    "\n",
+    "Git-хостинги, реализующие механизм облачного удалённого репозитория. Наиболее популярны на сегодня:\n",
+    "GitHub,\n",
+    "Bitbucket,\n",
+    "GitLab."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GITHUB — ХОСТИНГ IT-ПРОЕКТОВ\n",
+    "\n",
+    "[GitHub](https://github.com/) — наиболее популярный хостинг для IT-проектов. На нём хранятся миллионы удалённых репозиториев как небольших команд, так и крупных корпораций.\n",
+    "\n",
+    "Отличительная особенность GitHub — лёгкое создание форков.\n",
+    "\n",
+    "Среди возможностей этого IT-хостинга, кроме возможностей системы контроля версий, есть ведение документации (wiki) проекта, трекинг задач (issues), приём пожертвований.\n",
+    "\n",
+    "Небольшие проекты и проекты с открытым исходным кодом имеют те же возможности на GitHub, что и крупные коммерческие проекты, но для них использование хостинга бесплатно."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### СОЗДАНИЕ УДАЛЁННОГО РЕПОЗИТОРИЯ\n",
+    "\n",
+    "Для создания репозитория на GitHub используйте кнопку New на главной странице или на странице со списком репозиториев.\n",
+    "\n",
+    "После создания удалённого репозитория необходимо связать проект с ним.\n",
+    "\n",
+    "Мы можем связать наш локальный проект с этим репозиторием.\n",
+    "\n",
+    "Примечание. По умолчанию в удалённом репозитории главная ветка называется main. Однако в Git репозитории именуются как master. Из-за этого могут возникать трудности и необходимость объединять эти ветки при работе над проектами. Чтобы избежать этого, мы рекомендуем сменить название веток в GitHub-репозиториях на master. Для этого в настройках GitHub зайдите в раздел Repositories и смените имя ветки в разделе Repository default branch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### СОЗДАЁМ УДАЛЁННЫЙ РЕПОЗИТОРИЙ ПРОЕКТА\n",
+    "\n",
+    "Давайте создадим удалённый репозиторий для нашего проекта по очистке данных."
+   ]
   }
  ],
  "metadata": {
