Remove .venv folders from committed

--- a/skillfactory/Блок 1/PYTHON-15.1. Markdown и GIT для создания портфолио/DS_15.1_theory.ipynb
+++ b/skillfactory/Блок 1/PYTHON-15.1. Markdown и GIT для создания портфолио/DS_15.1_theory.ipynb
@@ -589,6 +589,238 @@
     "\n",
     "Давайте создадим удалённый репозиторий для нашего проекта по очистке данных."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Git. Основные операции"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Мы подготовили свой удалённый репозиторий, однако для начала нам нужно разобраться с локальным. Для этого необходимо подробнее изучить основные операции Git. После этого мы свяжем локальный репозиторий с удалённым и синхронизируем их.\n",
+    "\n",
+    "Перед тем как мы перейдём к рассмотрению основных команд, важно зафиксировать терминологию, которой мы будем оперировать. Ключ к пониманию концепции Git — знание о «трёх деревьях»:\n",
+    "\n",
+    "Рабочая директория — файловая система проекта (те файлы, с которыми вы работаете).\n",
+    "\n",
+    "Индекс — список отслеживаемых Git-файлов и директорий, промежуточное хранилище изменений (редактирование, удаление отслеживаемых файлов).\n",
+    "\n",
+    "Директория .git/ — в этой локальной директории хранятся все данные контроля версий проекта (вся история разработки — коммиты, ветки, теги и пр.).\n",
+    "\n",
+    "Перейдём к рассмотрению основных команд. Все они выполняются в терминале VS Code.\n",
+    "\n",
+    "Примечание. Сначала мы познакомимся с синтаксисом команд, обсудим, для чего они предназначены и как устроены, а затем в скринкасте рассмотрим их применение на практике."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Чтобы использовать функционал системы контроля версий Git, в командной строке используется команда git. Общий синтаксис выглядит следующим образом:\n",
+    "\n",
+    "git <команда> <аргументы команды>\n",
+    "git config\n",
+    "Команда config предназначена для настройки параметров Git на вашем компьютере.\n",
+    "\n",
+    "Например, первое, что вам следует сделать после установки Git — указать ваше имя и адрес электронной почты. Это важно, потому что каждый коммит в Git содержит эту информацию и она не может быть далее изменена. Без указания этой информации основные команды Git будут работать, но коммиты будут создаваться без информации об авторе, что может вызвать трудности при совместной работе.\n",
+    "\n",
+    "Если вы не сделали этого ранее, когда устанавливали Git, или захотели поменять настройки, рекомендуем сделать это сейчас. Для этого необходимо указать ключ --global (глобальные изменения) и передать в команду аргументы user.name и user.email:\n",
+    "\n",
+    "    git config --global user.name \"Your Name\"\n",
+    "    git config --global user.email \"your_email@whatever.com\"\n",
+    "Примечание. Следующая команда выведет список всех ваших настроек, включая имя и почту:\n",
+    "\n",
+    "git config --list\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "git init\n",
+    "Данная команда инициализирует локальный репозиторий. По сути, она создаёт пустой репозиторий на вашем компьютере.\n",
+    "\n",
+    "Если смотреть «под капот» и разбираться в деталях, то инициализация репозитория — это создание в текущей директории новой поддиректории с именем .git, содержащей все необходимые файлы репозитория — структуру Git-репозитория.\n",
+    "\n",
+    "Обратите внимание, что репозиторий инициализируется именно в той директории, в которой вы вызываете команду init! Следите за текущей директорией в командной строке.\n",
+    "\n",
+    "Пример (создаём репозиторий из текущей директории):\n",
+    "\n",
+    "git init\n",
+    "Initialized empty Git repository in A:/Курс DS-3.0/GIT-1. Markdown и Git для создания портфолио/DataCleaningProject/.git/\n",
+    "Примечание. Чтобы посмотреть на содержимое папки .git в Windows, в проводнике нужно отобразить скрытые папки. Для этого в разделе «Вид» нужно поставить галочку напротив пункта «Скрытые элементы»:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Примечание. Если удалить папку .git, вы удалите репозиторий и всю историю изменений вашего проекта.\n",
+    "\n",
+    "git clone\n",
+    "Команда clone — другой вариант инициализации репозитория из уже существующего с помощью копирования. Её общий синтаксис:\n",
+    "\n",
+    "git clone [ссылка на репозиторий]\n",
+    "\n",
+    "Данная операция пригодится вам, если все файлы вашего проекта уже где-то существуют.\n",
+    "\n",
+    "Клонировать можно как локальный (находящийся на вашем компьютере), так и удалённый (находящийся на GitHub) репозиторий.\n",
+    "\n",
+    "Пример:\n",
+    "\n",
+    "git clone https://github.com/SkillfactoryDS/example\n",
+    "git add\n",
+    "Команда add добавляет файл (папку с файлами) в индекс (иногда говорят «индексирует»), то есть добавляет его в список отслеживаемых для системы контроля версий. Нужно указать в аргументах, какой файл или папку мы хотим добавить.\n",
+    "\n",
+    "Примеры:\n",
+    "\n",
+    "git add README.md — добавляет файл README.md в индекс.\n",
+    "\n",
+    "git add data/ — добавляет папку data и всё её содержимое в индекс.\n",
+    "\n",
+    "Чаще всего нам нужно добавить все файлы в текущем каталоге в индекс (кроме игнорируемых, о которых мы поговорим ниже). Для этого используется команда\n",
+    "\n",
+    "git add .\n",
+    "Символ точки здесь означает текущую директорию, то есть мы добавляем в индекс все папки и файлы из текущей директории."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Git. Игнорирование и работа с удалённым репозиторием"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ФAЙЛ .GITIGNORE\n",
+    "\n",
+    "Зачем игнорировать?\n",
+    "\n",
+    "Команда git add . производит добавление всех файлов в проекте в отслеживаемые. Это удобно, если требуется отслеживать несколько файлов.\n",
+    "\n",
+    "Однако бывают файлы, которые нельзя добавлять в репозиторий.\n",
+    "\n",
+    "Это могут быть локальные настройки проекта, учётные данные, сведения об ошибках, библиотеки, промежуточные результаты компиляции и т. д.\n",
+    "\n",
+    "Такие файлы требуется добавлять в игнорируемые для Git.\n",
+    "\n",
+    "Примечание. Также стоит учитывать файлы, объём которых слишком велик — GitHub не позволяет хранить в удалённых репозиториях файлы объёмом более 500 Мб. Поэтому если в вашем проекте возникают такие файлы, их также стоит игнорировать. В дальнейшем вы столкнётесь с такой ситуацией при выполнении своего первого проекта по Python на этом курсе.\n",
+    "\n",
+    "Описание файла\n",
+    "\n",
+    "Файл с описанием файлов, для которых не должно вестись отслеживание версий, имеет расширение .gitignore.\n",
+    "\n",
+    "Файл .gitignore представляет собой простой текстовый файл с перечнем шаблонов файловых имён, которые не должны отслеживаться."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### РАБОТА С УДАЛЁННЫМ РЕПОЗИТОРИЕМ\n",
+    "\n",
+    "Когда вы работаете над проектом, вам, скорее всего, необходимо хранить его версию не только локально, но и удалённо.\n",
+    "\n",
+    "Зачем это нужно?\n",
+    "\n",
+    "Хранение проекта не только локально оберегает вас от рисков потери исходных файлов с кодом. Удалённый репозиторий в данном случае используется как резервная копия.\n",
+    "Удалённые репозитории — это основной механизм командной разработки. Код проекта, хранящийся на удалённом репозитории, доступен всем членам команды, и это обеспечивает гораздо большую гибкость управления разработкой, чем простой обмен файлами между членами команды.\n",
+    "Наконец, даже если вы работаете над проектом один, вам наверняка захочется поделиться своими результатами, например с потенциальным работодателем. Лучшего инструмента, чем механизм удалённых репозиториев вам не найти. Ревьюер вашего кода всегда сможет склонировать исходный код вашего проекта, запустить его и посмотреть на результаты.\n",
+    "Важно понимать, что удалённый репозиторий — это полноценный репозиторий, и у него все те же функции, что и у локального: собственные ветки, указатель HEAD, история коммитов и т. д.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "git remote add\n",
+    "Данная команда используется для добавления связанных удалённых репозиториев. Общий синтаксис этой команды выглядит следующим образом:\n",
+    "\n",
+    "git remote add [имя удалённого репозитория] [ссылка]\n",
+    "Имя удалённого репозитория в команде remote add вы можете придумать самостоятельно. Заданное имя вы будете использовать впоследствии при работе с репозиторием. Традиционно удалённый репозиторий носит имя origin, однако никаких ограничений здесь нет.\n",
+    "\n",
+    "Со ссылкой на удалённый репозиторий тоже всё просто: мы работаем с GitHub, поэтому эту ссылку можно получить, нажав на большую зелёную кнопку Code на странице репозитория на GitHub.\n",
+    "\n",
+    "Существует несколько вариантов подключения к удалённому репозиторию:\n",
+    "\n",
+    "HTTPS-ссылка,\n",
+    "SSH-ссылка,\n",
+    "GitHub CLI-ссылка.\n",
+    "Мы будем использовать вариант с HTTPS.\n",
+    "\n",
+    "Раньше можно было подключаться по HTTPS, используя имя пользователя и пароль от аккаунта GitHub. Потом эту возможность отключили из соображений безопасности. Сейчас вместо пароля нужно использовать персональный токен.\n",
+    "\n",
+    "Примечание. Напомним, что мы создавали персональный токен в модуле PY-8 при нашем первом знакомстве с GitHub.\n",
+    "\n",
+    "При первой загрузке/скачивании изменений из удалённого репозитория вас попросят ввести имя пользователя на GitHub и пароль. Нужно будет ввести своё имя пользователя, а вместо пароля вставить токен.\n",
+    "\n",
+    "Пример:\n",
+    "\n",
+    "git remote add origin https://github.com/SkillfactoryDS/DataCleaningProject.git\n",
+    "git remote remove\n",
+    "Раз есть возможность подключить удалённый репозиторий и добавить его в список связанных, значит, должна быть возможность и отключить его. Для этого предназначена команда remote remove. Её синтаксис:\n",
+    "\n",
+    "git remote remove [имя удалённого репозитория]\n",
+    "Пример:\n",
+    "\n",
+    "git remote remove origin\n",
+    "git push\n",
+    "Операция push производит отправку локальных изменений из текущей ветки в удалённый репозиторий. Общий синтаксис команды:\n",
+    "\n",
+    "git push [имя удалённого репозитория][имя ветки]\n",
+    "Пример:\n",
+    "\n",
+    "git push origin master\n",
+    "git fetch\n",
+    "Данная команда используется для получения изменений с удалённого репозитория. Важно отметить, что при этом приходит список изменений, но они не вносятся в код, используемый в локальном репозитории.\n",
+    "\n",
+    "Общий синтаксис:\n",
+    "\n",
+    "git fetch [имя удалённого репозитория]\n",
+    "Пример:\n",
+    "\n",
+    "git fetch origin\n",
+    "В результате выполнения данной команды на вашем компьютере будет создана новая удалённая ветка origin/master. Чтобы посмотреть, какие изменения были совершены в удалённом репозитории, можно воспользоваться уже знакомой вам командой checkout. Она позволит переключиться на новую ветку:\n",
+    "\n",
+    "git checkout origin/master\n",
+    "Примечание. Так как ветка origin/master не является веткой локального репозитория, а считается удалённой, то при выполнении команды checkout мы попадём в состояние “detached head”, о котором говорили ранее.\n",
+    "\n",
+    "git merge\n",
+    "Операция merge используется для слияния полученных с помощью команды fetch изменений и текущей ветки локального репозитория. О слиянии веток мы поговорим отдельно в следующем юните.\n",
+    "\n",
+    "Пример получения и слияния изменений из удалённого репозитория:\n",
+    "\n",
+    "git fetch origin\n",
+    "git merge origin/master\n",
+    "После выполнения этих команд все изменения, которые зафиксированы в удалённом репозитории, вступят в силу в локальном.\n",
+    "\n",
+    "git pull\n",
+    "На самом деле, если вы уверены в изменениях в удалённом репозитории, то можете сразу получить эти изменения и объединить их с локальным репозиторием. Для этого предназначена операция pull. По умолчанию она эквивалентна последовательному выполнению команд git fetch и git merge.\n",
+    "\n",
+    "Общий синтаксис команды:\n",
+    "\n",
+    "git pull [имя удаленного репозитория] [имя ветки]\n",
+    "Пример:\n",
+    "\n",
+    "git pull origin master\n",
+    "На практике, конечно же, команда pull используется намного чаще, чем связка fetch и merge.\n",
+    "\n",
+    "Интересный факт. Представьте, что вы и другой разработчик одновременно клонируете репозиторий. Затем ваш коллега выполняет команду push. Если вы попытаетесь выполнить такую же команду после него, ваш push точно будет отклонён. Для внесения ваших изменений вам требуется получить изменения с удалённого репозитория и слить их с вашим программным кодом с помощью команды pull."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Методологии ветвления. Культура коммитов. Форк"
+   ]
   }
  ],
  "metadata": {
